--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,16 @@
 /* font Awesome free Icon*/
 @import url("https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
-/* #font Awesome free Icon*/
 
+/* google fonts */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Rubik:wght@500;700;900&display=swap');
 /* Estilos generales*/
-.body {
+body {
     margin: 0;
     line-height: 1.5;
+    font-size: 16px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
 }
 
 * {
@@ -39,6 +44,27 @@
     top: 0;
     z-index: 10;
     border-right: 1px solid #e8dfec;
+    padding: 30px;
 }
+
+.aside .logo{
+    background-color: #ededed;
+    padding: 30px 0;
+}
+
+.aside .logo a{
+    font-size: 40px;
+    color: #302e4d;
+    font-family: 'Montserrat', sans-serif;
+} 
+.aside .nav{
+    background-color: #ededed;
+    list-style: none;
+    margin: 80px 0;
+}
+.aside .copyright-text{
+    background-color: #ededed;
+}
+
 
 /* Home */
