--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,10 +29,16 @@ body {
     background-color: #f2f2fc;
     min-height: 100vh;
     display: block;
+    padding:0 30px;
 }
 
 .main-content {
     padding-left: 270px;
+}
+.container {
+    min-width: 1100px;
+    margin: auto;
+    background-color: red;
 }
 /* aside */
 .aside {
@@ -79,9 +85,55 @@ body {
     bottom: 0;
     right: 0;
 }
+
+.aside .nav-toggler {
+    height: 40px;
+    width: 45px;
+    border: 1px solid #d4d4e3;
+    position: fixed;
+    left: 300px;
+    top: 30px;
+    z-index: 11;
+    border-radius: 5px;
+    background-color: #fdf9ff;
+    /*display: -ms-flexbox;
+    display: flex;*/
+    display: none;
+    -ms-flex-align: center;
+    align-items: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+}
+
+.aside .nav-toggler span{
+    height: 2px;
+    width: 18px;
+    display: inline-block;
+    position: relative;
+}
+
+
+.aside .nav-toggler span::before{
+    content: '';
+    height: 2px;
+    width: 18px;
+    position: absolute;
+    top: -6px;
+    left: 0;
+}
+
+.aside .nav-toggler span::after{
+    content: '';
+    height: 2px;
+    width: 18px;
+    position: absolute;
+    top: 6px;
+    left: 0;
+}
+
 .aside .nav{
     list-style: none;
-    margin: 80px 0;
+    margin: 50px 0;
     padding: 0;
 }
 
@@ -99,6 +151,7 @@ body {
     border-bottom: 1px solid #e8dfec;
     -webkit-transition: all 0.3s ease; 
     transition: all 0.3s ease;
+    text-transform: capitalize;
 }
 
 .aside .nav li a:not(.active):hover{
@@ -109,8 +162,13 @@ body {
     margin-right: 5px;
 }
 .aside .copyright-text{
-    background-color: #ededed;
+    font-size: 13px;
+    color: #7d7d7d;
 }
-
-
 /* Home */
+
+.home{
+    min-height: 100vh;
+    display:-ms-flexbox;
+    display: flex;
+}
